src/test/ui/type-inference/unbounded-type-param-in-fn.stderr
error[E0282]: type annotations needed
  --> $DIR/unbounded-type-param-in-fn.rs:6:5
   |
LL |     foo();
   |     ^^^ cannot infer type for type parameter `T` declared on the function `foo`
   |
help: consider specifying the type argument in the function call
   |
LL |     foo::<T>();
   |        ^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
