src/test/ui/type-inference/unbounded-type-param-in-fn.rs
fn foo<T>() -> T {
    panic!()
}

fn main() {
    foo(); //~ ERROR type annotations needed
}
